# xake

./: .coveragerc  .gitignore  .isort.cfg  .pydocstyle.ini  .travis.yml  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  scent.py  tox.ini
tests/: conftest.py  test_cli.py
tests/test_arger/: test_parse_docstring.py
xake/: __init__.py  __main__.py  cli.py
xake/arger/: wrapper.py
xake/tests/: test_utils.py
