[tool.poetry]
name = "xake"
version = "0.1.0"
description = "Python build tool using xonsh shell"
authors = ["Noortheen Raja <jnoortheen@gmail.com>"]
license = "MIT"

readme = 'README.md'
repository = "https://github.com/jnoortheen/xake"
homepage = "https://github.com/jnoortheen/xake"

keywords = ['build-tool', 'make', ]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"

[tool.poetry.dev-dependencies]
pytest = "^4"
pytest-cov = "^2.8"
tox = "^3.14"

[tool.poetry.scripts]
xake = 'xake:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
