[tool.poetry]

name = "xake"
version = "0.0"
description = "Make alternative using Python/Xonsh-shell"

license = "MIT"

authors = ["Noortheen Raja <jnoortheen@gmail.com>"]

readme = "README.md"

documentation = "https://xake.readthedocs.io"
repository = "https://github.com/jnoortheen/xake"
homepage = "https://pypi.org/project/xake"

keywords = ['build-tool', 'make', ]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
]

[tool.poetry.dependencies]

python = "^3.6"


[tool.poetry.dev-dependencies]

# Formatters
black = "=19.10b0"
isort = "=4.3.21"

# Linters
mypy = "*"
pydocstyle = "*"
pylint = "^2.0"

# Testing
pytest = "^5.3.2"
pytest-cov = "*"
pytest-describe = "*"
pytest-expecter = "*"
pytest-random = "*"
freezegun = "*"

# Reports
coveragespace = "^3.1.1"

# Documentation
mkdocs = "^1.0"
pygments = "*"

# Tooling
pyinstaller = "*"
sniffer = "*"
MacFSEvents = { version = "*", platform = "darwin" }
pync = { version = "*", platform = "darwin" }
ipython = "^7.12.0"

[tool.poetry.scripts]
xake = 'xake:main'

[tool.black]
target-version = ["py36", "py37"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
